--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ pyRFC3339==1.0
 python-apt==1.6.5+ubuntu0.2
 python-dateutil==2.8.1
 python-debian==0.1.32
+python-decouple==3.3
 python-editor==1.0.4
 pytz==2020.1
 pyxdg==0.25
@@ -106,6 +107,7 @@ virtualenv==20.0.18
 visitor==0.1.3
 wadllib==1.3.2
 Werkzeug==0.16.0
+whitenoise==5.1.0
 wrapt==1.12.1
 WTForms==2.3.1
 xkit==0.0.0
